# anytypeAgent

./: .env.example  DOKUMENTATION.md  README.md  pyproject.toml
src/anytype_agent/: __init__.py  __main__.py  config.py  main.py
src/anytype_agent/agents/: __init__.py  base_agent.py  learning_agent.py  notes_agent.py  organization_agent.py
src/anytype_agent/mcp/: __init__.py  client.py  server.py
src/anytype_agent/templates/: __init__.py  journal.md  learning.md  tasks.md
tests/: __init__.py
