[project]
name = "anytype-agent"
version = "0.1.0"
description = "A personal learning, notes, and organization assistant powered by AnyType"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Takuruu", email = "your@email.com" }
]

dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
anytype-agent = "anytype_agent.main:main"

[project.urls]
Homepage = "https://github.com/takuruu/anytype-agent"
Documentation = "https://github.com/takuruu/anytype-agent#readme"
Repository = "https://github.com/takuruu/anytype-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
